feat: edge detection

--- a/src/posts/creative_coding/complex_function.mdx
+++ b/src/posts/creative_coding/complex_function.mdx
@@ -1,12 +1,12 @@
 ---
-title: Domain Coloring
+title: Complex Function
 slug: creative_coding/complex_function
 ---
 
 import { Suspense } from "react";
 import Preview from "@/components/creative_coding/complex_function";
 
-# Domain Coloring
+# Complex Function
 
 <Suspense>
   <Preview />
