fix: migrate to sass and recolor

--- a/src/posts/WIP/elementary_cellular_automata.mdx
+++ b/src/posts/WIP/elementary_cellular_automata.mdx
@@ -1,12 +1,12 @@
 ---
 title: Elementary Cellular Automata
-slug: creative_coding/elementary_cellular_automata
+slug: WIP/creative_coding/elementary_cellular_automata
 ---
 
 import { Suspense } from "react";
 import Preview from "@/components/creative_coding/elementary_cellular_automata";
 
-# Elementary Cellular Automata (WIP)
+# Elementary Cellular Automata
 
 <Suspense>
   <Preview />
