--- a/src/posts/WIP/fractal_tree.mdx
+++ b/src/posts/WIP/fractal_tree.mdx
@@ -1,12 +1,12 @@
 ---
 title: Fractal Trees
-slug: creative_coding/fractal_trees
+slug: WIP/creative_coding/fractal_trees
 ---
 
 import { Suspense } from "react";
 import Preview from "@/components/creative_coding/fractal_trees";
 
-# Fractal Trees (WIP)
+# Fractal Trees
 
 <Suspense>
   <Preview />
