--- a/src/posts/WIP/slit_experiment.mdx
+++ b/src/posts/WIP/slit_experiment.mdx
@@ -1,12 +1,12 @@
 ---
 title: Slit Experiment
-slug: creative_coding/slit_experiment
+slug: WIP/creative_coding/slit_experiment
 ---
 
 import { Suspense } from "react";
 import Preview from "@/components/creative_coding/slit_experiment";
 
-# Slit Experiment (WIP)
+# Slit Experiment
 
 <Suspense>
   <Preview />
