--- a/src/posts/WIP/turing_machine.mdx
+++ b/src/posts/WIP/turing_machine.mdx
@@ -1,12 +1,12 @@
 ---
 title: Turing Machine
-slug: creative_coding/turing_machine
+slug: WIP/creative_coding/turing_machine
 ---
 
 import { Suspense } from "react";
 import Preview from "@/components/creative_coding/turing_machine";
 
-# Turing Machine (WIP)
+# Turing Machine
 
 <Suspense>
   <Preview />
