chore: fix styling issues and add new files

--- a/src/posts/WIP/brainfuck.mdx
+++ b/src/posts/WIP/brainfuck.mdx
@@ -6,7 +6,7 @@ slug: WIP/creative_coding/brainfuck
 import { Suspense } from "react";
 import Preview from "@/components/creative_coding/brainfuck";
 
-# Brainfuck (WIP)
+# Brainfuck
 
 <Suspense>
   <Preview />
