feat: update font and color scheme

--- a/src/posts/creative_coding/brainfuck.mdx
+++ b/src/posts/creative_coding/brainfuck.mdx
@@ -1,6 +1,7 @@
 ---
 title: Brainf*ck
-slug: WIP/creative_coding/brainfuck
+slug: creative_coding/brainfuck
+type: WIP
 ---
 
 import { Suspense } from "react";
