--- a/src/posts/creative_coding/elementary_cellular_automata.mdx
+++ b/src/posts/creative_coding/elementary_cellular_automata.mdx
@@ -1,6 +1,7 @@
 ---
 title: Elementary Cellular Automata
-slug: WIP/creative_coding/elementary_cellular_automata
+slug: creative_coding/elementary_cellular_automata
+type: WIP
 ---
 
 import { Suspense } from "react";
