--- a/src/posts/creative_coding/fractal_tree.mdx
+++ b/src/posts/creative_coding/fractal_tree.mdx
@@ -1,6 +1,7 @@
 ---
 title: Fractal Trees
-slug: WIP/creative_coding/fractal_trees
+slug: creative_coding/fractal_trees
+type: WIP
 ---
 
 import { Suspense } from "react";
