--- a/src/posts/creative_coding/poincare_disk.mdx
+++ b/src/posts/creative_coding/poincare_disk.mdx
@@ -1,6 +1,7 @@
 ---
 title: Poincaré Disk
-slug: WIP/creative_coding/poincare_disk
+slug: creative_coding/poincare_disk
+type: WIP
 ---
 
 import { Suspense } from "react";
