--- a/src/posts/creative_coding/reaction_diffusion.mdx
+++ b/src/posts/creative_coding/reaction_diffusion.mdx
@@ -1,6 +1,7 @@
 ---
 title: Reaction-Diffusion System
 slug: creative_coding/reaction_diffusion
+type: Published
 ---
 
 import { Suspense } from "react";
