--- a/src/posts/creative_coding/self_organizing_map.mdx
+++ b/src/posts/creative_coding/self_organizing_map.mdx
@@ -1,6 +1,7 @@
 ---
 title: Self-organizing Map
 slug: creative_coding/self_organizing_map
+type: Published
 ---
 
 import { Suspense } from "react";
