--- a/src/posts/creative_coding/slit_experiment.mdx
+++ b/src/posts/creative_coding/slit_experiment.mdx
@@ -1,6 +1,7 @@
 ---
 title: Slit Experiment
-slug: WIP/creative_coding/slit_experiment
+slug: creative_coding/slit_experiment
+type: WIP
 ---
 
 import { Suspense } from "react";
