--- a/src/posts/creative_coding/turing_machine.mdx
+++ b/src/posts/creative_coding/turing_machine.mdx
@@ -1,6 +1,7 @@
 ---
 title: Turing Machine
-slug: WIP/creative_coding/turing_machine
+slug: creative_coding/turing_machine
+type: WIP
 ---
 
 import { Suspense } from "react";
