feat: update `/creative_coding/fractal_trees`
Fix eslint, configs and plugins versions

--- a/src/posts/creative_coding/fractal_tree.mdx
+++ b/src/posts/creative_coding/fractal_tree.mdx
@@ -1,7 +1,7 @@
 ---
 title: Fractal Trees
 slug: /creative_coding/fractal_trees
-type: WIP
+type: Published
 ---
 
 import { Suspense } from "react";
