--- a/src/posts/creative_coding/turing_machine.mdx
+++ b/src/posts/creative_coding/turing_machine.mdx
@@ -12,5 +12,6 @@ import Preview from "@/components/creative_coding/turing_machine";
 <Suspense>
   <Preview />
 </Suspense>
-A Turing machine is a mathematical model of computation describing an abstract machine
-that manipulates symbols on a strip of tape according to a table of rules.
+A Turing machine is a mathematical model of computation describing an abstract
+machine that manipulates symbols on a strip of tape according to a table of
+rules.
