--- a/src/posts/creative_coding/fractal/fractal_tree.mdx
+++ b/src/posts/creative_coding/fractal/fractal_tree.mdx
@@ -1,13 +1,13 @@
 ---
 title: Fractal Trees
-slug: /creative_coding/fractal_trees
+slug: /creative_coding/fractal/fractal_tree
 type: Published
 ---
 
 import { Suspense } from "react";
-import Preview from "@/components/creative_coding/fractal_trees";
+import Preview from "@/components/creative_coding/fractal/fractal_tree";
 
-# Fractal Trees
+# Fractal Tree
 
 <Suspense>
   <Preview />
